добавит карту яндекс на страницу "Квартира"

--- a/src/apartments-item.html
+++ b/src/apartments-item.html
@@ -372,8 +372,8 @@
       </div>
     </section>
 
-    <section class="section apartments-item-page__section map">
-      <div class="container map__container">
+    <section class="section apartments-item-page__section map" id="map">
+      <!-- <div class="container map__container">
         <h5 class="map__title title title_40">
           Мы рядом
         </h5>
@@ -562,7 +562,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
 
