--- a/src/project-item.html
+++ b/src/project-item.html
@@ -276,9 +276,9 @@
                 <p class="choice__text">
                   найдено 5 квартир
                 </p>
-                <button class="choice__btn-request btn btn_dark popup-link" href="#popup-form">
+                <a class="choice__btn-request btn btn_dark" href="apartments.html">
                   Смотреть квартиры
-                </button>
+                </a>
               </div>
 
             </div>
@@ -1047,7 +1047,7 @@
 
             </ul>            
           </div>
-          
+
           <aside class="buy__aside aside">
           </aside>
         </div>
@@ -1094,7 +1094,7 @@
 
               </div>
 
-              <button class="btn btn_green address__btn">
+              <button class="btn btn_green address__btn popup-link" href="#popup-form">
                 Получить консультацию
               </button>
             </div>
