добавит верстку страницы "Способ покупки"

--- a/src/sposob-pokupki.html
+++ b/src/sposob-pokupki.html
@@ -8,19 +8,21 @@
   @@include('./html/header.html', {})
 
   <main class="main">
-    <section class="section slider">
-      <div class="container slider__container">
-        <h1 class="slider__title title title_25">
-          Способы покупки
-        </h1>
 
-        <ul class="slider__list">
-          <li class="slider__item" data-id="1">
-            <h2 class="slider__subtitle title title_40">
+    <section class="section section_top top" id="hypothec">
+      <div class="container top__container ">
+        <div class="top__wrap wrap">
+          <h2 class="top__title title title_25">
+            Способы покупки
+          </h2>
+
+
+          <li class="top__content" data-id="1">
+            <h2 class="top__subtitle title title_40">
               Ипотека
             </h2>
 
-            <p class="slider__text" href="sposob-pokupki.html">
+            <p class="top__text" href="sposob-pokupki.html">
               Ипотека — это финансовый инструмент, который существенно облегчает процесс приобретения жилья. Существует
               много причин, почему брать ипотеку может быть выгодным решением, а с нами это ещё и просто. <br><br><br>
               Подобрать выгодную ставку, правильно заполнить анкету для заявки поможет ипотечный специалист компании.
@@ -28,154 +30,328 @@
               документов квартира бронируется, цена фиксируется.
             </p>
 
-            <button class="slider__btn btn btn_green">
+            <button class="top__btn btn btn_green">
               Оставить заявку
             </button>
 
-            <div class="slider__img">
+            <div class="top__img">
               <img src="img/buy-slide-1.jpg" alt="Сибирь. Способ покупки">
             </div>
           </li>
-        </ul>
 
-        <ul class="slider__toggle-list">
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Ипотека
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Рассрочка
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Сертификаты
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              100% оплата
-            </button>
-          </li>
-        </ul>
 
-        <ul class="slider__facts-list">
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              Ставки по ипотеке от 3,8%
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              2 дня — средний срок рассмотрения заявки 
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              1 анкета для всех банков-партнёров
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              5 банков-партнёров
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              Снижаем ставки за свой счёт
-            </p>
-          </li>
-        </ul>
+          <ul class="top__facts-list">
+            <li class="top__facts-item">
+              <p class="top__facts-text">
+                Ставки по ипотеке от 3,8%
+              </p>
+            </li>
+            <li class="top__facts-item">
+              <p class="top__facts-text">
+                2 дня — средний срок рассмотрения заявки 
+              </p>
+            </li>
+            <li class="top__facts-item">
+              <p class="top__facts-text">
+                1 анкета для всех банков-партнёров
+              </p>
+            </li>
+            <li class="top__facts-item">
+              <p class="top__facts-text">
+                5 банков-партнёров
+              </p>
+            </li>
+            <li class="top__facts-item">
+              <p class="top__facts-text">
+                Снижаем ставки за свой счёт
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <aside class="top__aside aside">
+        </aside>
       </div>
-
     </section>
 
-    <section class="section slider">
-      <div class="container slider__container">
-        <h2 class="slider__title title title_25">
-          Актуальные программы
-        </h2>
+    <section class="section section_programms programms">
+      <div class="container programms__container ">
+        <div class="programms__wrap wrap">
+          <div class="programms__content-left">
 
-        <ul class="slider__list">
-          <li class="slider__item" data-id="1">
-            <h2 class="slider__subtitle title title_40">
-              Ипотека
+            <h2 class="programms__title title title_25">
+              Актуальные программы
             </h2>
 
-            <p class="slider__text" href="sposob-pokupki.html">
-              Ипотека — это финансовый инструмент, который существенно облегчает процесс приобретения жилья. Существует
-              много причин, почему брать ипотеку может быть выгодным решением, а с нами это ещё и просто. <br><br><br>
-              Подобрать выгодную ставку, правильно заполнить анкету для заявки поможет ипотечный специалист компании.
-              Подать документы и получить положительное ипотечное решение можно дистанционно. На время оформления
-              документов квартира бронируется, цена фиксируется.
-            </p>
+            <ul class="programms__list">
+              <li class="programms__white-box">
+                <p class="programms__text">
+                  IT-ипотека от 5%
+                </p>
+              </li>
 
-            <button class="slider__btn btn btn_green">
+              <li class="programms__white-box">
+                <p class="programms__text">
+                  Семейная от 6%
+                </p>
+              </li>
+            </ul>
+
+
+          </div>
+
+          <div class="programms__content-right">
+            <h5 class="programms__subtitle text">
+              Банки-партнеры
+            </h5>
+
+            <ul class="programms__banks-list">
+              <li class="programms__banks-item">
+                <img src="@img/bank-1.svg" alt="банк">
+              </li>
+
+              <li class="programms__banks-item">
+                <img src="@img/bank-2.svg" alt="банк">
+              </li>
+
+              <li class="programms__banks-item">
+                <img src="@img/bank-3.svg" alt="банк">
+              </li>
+
+              <li class="programms__banks-item">
+                <img src="@img/bank-4.svg" alt="банк">
+              </li>
+
+              <li class="programms__banks-item">
+                <img src="@img/bank-5.svg" alt="банк">
+              </li>
+
+              <li class="programms__banks-item">
+                <img src="@img/bank-6.svg" alt="банк">
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+        <aside class="programms__aside aside">
+        </aside>
+      </div>
+    </section>
+
+    <section class="section section_simple simple">
+      <div class="container simple__container ">
+        <div class="simple__wrap wrap">
+
+          <h2 class="simple__title title title_25">
+            Ипотека - это просто
+          </h2>
+
+          <p class="simple__text text">
+            Оставьте заявку, и мы подберём вам оптимальную ипотечную программу. Мы работаем с 5 крупнейшими банками
+            страны. Для клиентов Сибири они разработали специальные предложения со сниженными ставками.
+          </p>
+
+          <ul class="simple__list">
+            <li class="simple__item">
+              <h3 class="simple__item-title">
+                От вас - <br>только документы
+              </h3>
+
+              <p class="simple__item-text">
+                В среднем для подачи заявки требуется 1-2 документа
+              </p>
+
+              <span class="simple__item-number">
+                1
+              </span>
+            </li>
+
+            <li class="simple__item">
+              <h3 class="simple__item-title">
+                Дистанционная подача заявки
+              </h3>
+
+              <p class="simple__item-text">
+                Ипотечные брокеры оформят заявку онлайн, не нужно приезжать в офис
+              </p>
+
+              <span class="simple__item-number">
+                2
+              </span>
+            </li>
+
+            <li class="simple__item">
+              <h3 class="simple__item-title">
+                Выбор наиболее выгодных условий
+              </h3>
+
+              <p class="simple__item-text">
+                Ипотечный брокер поможет корректно подать заявку на наиболее выгодные программы
+              </p>
+
+              <span class="simple__item-number">
+                3
+              </span>
+            </li>
+          </ul>
+
+          <div class="simple__banner">
+            <div class="simple__banner-text-wrap">
+              <h3 class="simple__banner-title title title_30">
+                Оставьте заявку, и мы подберём вам оптимальную ипотечную программу!
+              </h3>
+              <p class="simple__banner-desc text">
+                Мы работаем с 5 крупнейшими банками страны. Для клиентов Сибири они разработали специальные предложения
+                со сниженными ставками.
+              </p>
+              <button class="simple__banner-btn btn btn_green popup-link" href="#popup-form">
+                Оставить заявку
+              </button>
+            </div>
+
+            <img class="simple__background" src="@img/buy-man.png" alt="баннер">
+
+          </div>
+
+        </div>
+
+        <aside class="simple__aside aside">
+        </aside>
+      </div>
+    </section>
+
+    <section class="section section_installment installment" id="installment">
+      <div class="container installment__container ">
+        <div class="installment__wrap wrap">
+          <div class="installment__img">
+            <img src="@img/installment-img-1.jpg" alt="">
+          </div>
+
+          <div class="simple__banner-text-wrap">
+            <h3 class="simple__banner-title title title_40">
+              Рассрочка
+            </h3>
+            <p class="simple__banner-desc text">
+              Рассрочка — тип оплаты, при котором клиент вносит первоначальный взнос, а остальное оплачивается равными
+              платежами по согласованному графику, без процентов.
+            </p>
+            <button class="simple__banner-btn btn btn_green popup-link" href="#popup-form">
               Оставить заявку
             </button>
+          </div>
+        </div>
 
-            <div class="slider__img">
-              <img src="img/buy-slide-1.jpg" alt="Сибирь. Способ покупки">
-            </div>
-          </li>
-        </ul>
-
-        <ul class="slider__toggle-list">
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Ипотека
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Рассрочка
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              Сертификаты
-            </button>
-          </li>
-          <li class="slider__toggle-item">
-            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
-              100% оплата
-            </button>
-          </li>
-        </ul>
-
-        <ul class="slider__facts-list">
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              Ставки по ипотеке от 3,8%
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              2 дня — средний срок рассмотрения заявки 
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              1 анкета для всех банков-партнёров
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              5 банков-партнёров
-            </p>
-          </li>
-          <li class="slider__facts-item">
-            <p class="slider__facts-text">
-              Снижаем ставки за свой счёт
-            </p>
-          </li>
-        </ul>
+        <aside class="installment__aside aside">
+        </aside>
       </div>
-
     </section>
+
+    <section class="section section_certificates certificates" id="certificates">
+      <div class="container certificates__container ">
+        <div class="certificates__wrap wrap">
+          <div class="certificates__img">
+            <img src="@img/certificates-img-1.jpg" alt="">
+          </div>
+
+          <div class="simple__banner-text-wrap">
+            <h3 class="simple__banner-title title title_40">
+              Рассрочка
+            </h3>
+            <p class="simple__banner-desc text">
+              В качестве оплаты покупатели могут использовать государственные жилищные сертификаты, материнский семейный
+              капитал (если ребенку исполнилось 3 года) или два этих способа одновременно. Если стоимость квартиры выше,
+              остальную сумму можно взять в рассрочку или ипотеку. Проконсультироваться и узнать подробности можно на
+              видеовстрече, а оформить документы ー через онлайн-сервисы.
+            </p>
+            <button class="simple__banner-btn btn btn_green popup-link" href="#popup-form">
+              Оставить заявку
+            </button>
+          </div>
+        </div>
+
+        <aside class="certificates__aside aside">
+        </aside>
+      </div>
+    </section>
+
+    <section class="section section_bot bot" id="office">
+      <div class="container bot__container">
+        <div class="bot__wrap wrap">
+          <div class="bot__address address">
+            <h3 class="address__title title title_40">
+              Офис продаж
+            </h3>
+            <p class="address__desc">
+              Ежедневно с 10:00-17:00
+            </p>
+
+            <div class="address__wrapper">
+              <div class="address__item address__item_address">
+                <p class="address__item-title">
+                  Адрес:
+                </p>
+                <p class="address__item-text">
+                  Тюмень, ул. Клары Цеткин, д. 61, к2
+                </p>
+              </div>
+
+              <div class="address__item address__item_phone">
+                <p class="address__item-title">
+                  Телефон:
+                </p>
+                <a class="address__item-text" href="tel: 8 (3452) 611-157">
+                  8 (3452) 611-157
+                </a>
+              </div>
+
+              <div class="address__item address__item_mail">
+                <p class="address__item-title">
+                  Почта:
+                </p>
+                <a class="address__item-text" href="mailto: hello_sibir@yandex.ru">
+                  hello_sibir@yandex.ru
+                </a>
+              </div>
+
+            </div>
+
+            <button class="btn btn_green address__btn popup-link" href="#popup-form">
+              Получить консультацию
+            </button>
+          </div>
+
+          <div class="bot__map" id="map">
+          </div>
+        </div>
+
+        <aside class="bot__aside aside">
+        </aside>
+      </div>
+    </section>
+
+    <div class="aside-menu">
+      <ul class="slider__toggle-list">
+        <li class="slider__toggle-item">
+          <a class="slider__toggle-link" href="#hypothec" data-id="1">
+            Ипотека
+          </a>
+        </li>
+        <li class="slider__toggle-item">
+          <a class="slider__toggle-link" href="#installment" data-id="1">
+            Рассрочка
+          </a>
+        </li>
+        <li class="slider__toggle-item">
+          <a class="slider__toggle-link" href="#certificates" data-id="1">
+            Сертификаты
+          </a>
+        </li>
+      </ul>
+    </div>
+
   </main>
+
 
   @@include('./html/footer.html', {})
 </body>
