поправит верстку плавающего блока

--- a/src/sotrudnichestvo.html
+++ b/src/sotrudnichestvo.html
@@ -4,12 +4,25 @@
 "title": "Сибирь. Сотрудничество",
 })
 
-<body class="not-found" data-page="404">
+<body class="cooperation">
   @@include('./html/header.html', {})
 
   <main class="main">
-    <section class="section not-found">
-      <div class="container not-found__container">
+    <section class="section cooperation">
+      <div class="container cooperation__container">
+        <h1 class="cooperation__title title title_25">
+          Сотрудничество
+        </h1>
+        <div class="cooperation__btn-wrapper">
+          <a class="cooperation__btn cooperation__btn_white" href="o-companii.html">
+            О компании
+          </a>
+          <a class="cooperation__btn cooperation__btn_green" href="sotrudnichestvo.html">
+            Сотрудничество
+          </a>
+        </div>
+
+
 
       </div>
     </section>
