--- a/src/o-companii.html
+++ b/src/o-companii.html
@@ -4,12 +4,25 @@
 "title": "Сибирь. О компании",
 })
 
-<body class="not-found" data-page="404">
+<body class="company">
   @@include('./html/header.html', {})
 
   <main class="main">
-    <section class="section not-found">
-      <div class="container not-found__container">
+    <section class="section company">
+      <div class="container company__container">
+        <h1 class="company__title title title_25">
+          О компании
+        </h1>
+        <div class="company__btn-wrapper">
+          <a class="company__btn company__btn_white" href="o-companii.html">
+            О компании
+          </a>
+          <a class="company__btn company__btn_green" href="sotrudnichestvo.html">
+            Сотрудничество
+          </a>
+        </div>
+
+
 
       </div>
     </section>
