--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           Срок сдачи 1 очереди – II квартал 2025 года
         </p>
 
-        <a class="banner__btn btn btn_dark btn_reset" href="#plans" scrollspy="plans">
+        <a class="banner__btn btn btn_dark btn_reset" href="apartments.html" scrollspy="plans">
           Смотреть планировки
         </a>
         <!-- </div> -->
@@ -108,9 +108,9 @@
                     от 28,72 до 83,61
                   </p>
                 </div>
-                <p class="building__card-link">
+                <a class="building__card-link" href="apartments.html">
                   128 квартир
-                </p>
+                </a>
               </div>
             </div>
           </li>
@@ -328,9 +328,9 @@
             <p class="choice__text">
               найдено 5 квартир
             </p>
-            <button class="choice__btn-request btn btn_dark popup-link" href="#popup-form">
+            <a class="choice__btn-request btn btn_dark" href="apartments.html">
               Смотреть квартиры
-            </button>
+            </a>
           </div>
 
 
@@ -420,9 +420,9 @@
           <p class="regions-banner__text">
             Купите или арендуйте коммерческое помещение
           </p>
-          <button class="regions-banner__button">
+          <a class="regions-banner__button" href="kommercia.html">
             Выбрать помещение
-          </button>
+          </a>
         </div>
 
       </div>
@@ -1195,7 +1195,7 @@
                   <path d="M10.295 11.5L7.5 8.705V4H8.5V8.29L11 10.795L10.295 11.5Z" fill="black" />
                 </svg>
               </p>
-              <a class="promo__item-title" href="promo-item.html">
+              <a class="promo__item-title popup-link" href="#promo">
                 Квартиры в расрочку от 2%
               </a>
             </li>
