--- a/src/apartments.html
+++ b/src/apartments.html
@@ -17,7 +17,7 @@
         <div class="choice__form" action="#" method="post" enctype="multipart/form-data">
 
           <ul class="choice__inputs-list choice__inputs-list_top">
-            <li class="choice__input-block choice__input-block_select">
+            <li class="choice__input-block choice__input-block_select choice__input-block_select_project">
               <p class="choice__label">
                 Проект
               </p>
@@ -65,7 +65,7 @@
               </div>
             </li>
 
-            <li class="choice__input-block choice__input-block_slider">
+            <li class="choice__input-block choice__input-block_slider choice__input-block_slider_square">
               <p class="choice__label">
                 Площадь, м2
               </p>
@@ -102,7 +102,7 @@
               </div>
             </li>
 
-            <li class="choice__input-block choice__input-block_slider">
+            <li class="choice__input-block choice__input-block_slider choice__input-block_slider_cost">
               <p class="choice__label">
                 Стоимость, ₽
               </p>
@@ -166,7 +166,7 @@
               </div>
             </li>
 
-            <li class="choice__input-block choice__input-block_select">
+            <li class="choice__input-block choice__input-block_select choice__input-block_select">
               <p class="choice__label">
                 Проект
               </p>
@@ -191,7 +191,7 @@
               </div>
             </li>
 
-            <li class="choice__input-block choice__input-block_select">
+            <li class="choice__input-block choice__input-block_select choice__input-block_select_date">
               <p class="choice__label">
                 Срок сдачи
               </p>
@@ -220,7 +220,7 @@
               </div>
             </li>
 
-            <li class="choice__input-block choice__input-block_slider">
+            <li class="choice__input-block choice__input-block_slider choice__input-block_slider_floor">
               <p class="choice__label">
                 Этаж
               </p>
