добавит адаптив главной страницы, на 1512px

--- a/src/apartments-item.html
+++ b/src/apartments-item.html
@@ -374,7 +374,7 @@
 
     <section class="section section_geo geo">
       <div class="container geo__container">
-        <h2 class="geo__title title">
+        <h2 class="geo__title title title_40">
           Мы рядом
         </h2>
 
@@ -602,7 +602,7 @@
 
     <section class="section section_apartments apartments">
       <div class="container apartments__container apartments_swiper">
-        <h2 class="apartments__title title">
+        <h2 class="apartments__title title title_40">
           Похожие квартиры
         </h2>
 
