--- a/src/commercial-item.html
+++ b/src/commercial-item.html
@@ -149,7 +149,7 @@
             </svg>
           </button>
           <p class="about__right-title title title_25">
-            Помещение №4,  269,65м2
+            Помещение №4, 269,65м2
           </p>
 
           <div class="about__right-wrapper">
@@ -161,7 +161,7 @@
                 10 536 000₽
               </p>
             </div>
-  
+
             <div class="about__right-rent-wrap">
               <p class="about__right-rent-title">
                 Аренда
@@ -324,7 +324,7 @@
 
     <section class="section section_apartments apartments">
       <div class="container apartments__container apartments_swiper">
-        <h2 class="apartments__title title">
+        <h2 class="apartments__title title title_40">
           Другие помещения
         </h2>
 
