--- a/src/project-item.html
+++ b/src/project-item.html
@@ -144,7 +144,7 @@
       <section class="section section_choice choice">
         <div class="container choice__container">
           <div class="choice__wrap wrap">
-            <h2 class="choice__title title">
+            <h2 class="choice__title title title_40">
               Выбрать квартиру мечты
             </h2>
 
@@ -292,7 +292,7 @@
       <section class="section section_regions regions" id="advantages">
         <div class="container regions__container">
           <div class="regions__wrap wrap regions_swiper">
-            <h2 class="regions__title title">
+            <h2 class="regions__title title title_40">
               В районах Сибири
             </h2>
 
@@ -402,7 +402,7 @@
         <div class="container geo__container">
           <div class="geo__wrap wrap">
 
-            <h2 class="geo__title title">
+            <h2 class="geo__title title title_40">
               Местоположение
             </h2>
 
@@ -666,7 +666,7 @@
         <div class="container commercial__container">
           <div class="commercial__wrap wrap commercial_swiper">
             <div class="commercial__top-wrap">
-              <h2 class="commercial__title title">
+              <h2 class="commercial__title title title_40">
                 Коммерческие помещения
               </h2>
 
@@ -1045,7 +1045,7 @@
                 </p>
               </li>
 
-            </ul>            
+            </ul>
           </div>
 
           <aside class="buy__aside aside">
